--- a/src/main/resources/templates/search-results.html
+++ b/src/main/resources/templates/search-results.html
@@ -5,6 +5,6 @@
     <title></title>
 </head>
 <body>
-    <h1 th:text="'Hello, ' + ${aname}">Display a name</h1>
+    <h1 th:text="'Display results with' + ' \'' + ${aname} + '\' ' +'in them:'">Display a name</h1>
 </body>
 </html>
