--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -6,14 +6,16 @@
 </head>
 <body>
 <h1 th:text="${title}">Title</h1>
-<form method="post">
+<form method="post" th:object="${playground}">
     <div>
-        <label for="name-field">Name</label>
-        <input id="name-field" type="text" name="playgroundName" />
+        <label th:for="name">Name</label>
+        <input th:field="*{name}" />
+        <span th:errors="*{name}"></span>
     </div>
     <div>
-        <label for="desc-field">Description</label>
-        <input id="desc-field" type="text" name="playgroundDescription" />
+        <label th:for="description">Description</label>
+        <input th:field="*{description}" />
+        <span th:errors="*{description}"></span>
     </div>
     <input type="submit" value="Add Playground" />
 </form>
