--- a/src/main/resources/templates/search-results.html
+++ b/src/main/resources/templates/search-results.html
@@ -6,5 +6,18 @@
 </head>
 <body>
     <h1 th:text="'Display results with' + ' \'' + ${aname} + '\' ' +'in them:'">Display a name</h1>
+
+    <p th:unless="${playgrounds} and ${playgrounds.size()}">no playgrounds :(</p>
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Description</th>
+        </tr>
+        <tr th:each="playground : ${playgrounds}">
+            <td th:text="${playground.name}"></td>
+            <td th:text="${playground.description}"></td>
+
+        </tr>
+    </table>
 </body>
 </html>
