--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -5,9 +5,12 @@
         <title></title>
     </head>
     <body>
+        //Heading of page
         <h1 th:text="${title}">View a Playground</h1>
 
+        //if playground object exists...
         <div th:if="${playground}">
+            //table of playground details. Revise when database columns are flushed out.
             <table>
                 <tr>
                     <th>Name</th>
