--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/>
-    <title></title>
-</head>
-<body>
+<head th:replace="fragments :: head"></head>
+
+<body class="container body-content">
+
+<nav th:replace="fragments :: nav-bar"></nav>
 <h1 th:text="${title}">Title</h1>
 <form method="post" th:object="${playground}">
     <div>
