--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
+<head th:replace="fragments :: head"></head>
 
-</head>
 <body class="container body-content">
+<nav th:replace="fragments :: nav-bar"></nav>
     <h1 th:text="${title}">Default Title</h1>
 
    <form method="post" th:object="${user}">
