--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -6,18 +6,24 @@
     <meta charset="UTF-8" />
     <title>Title</title>
 
-    <!-- Bootstrap stylesheet | Template used: bootswatch.com/Journal -->
-    <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/simplex/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-1OYccka9EByiS23wvPFiYHBPRAgU91xYVFb8g8sen6vRiBI5Uko6+B87q8zPGUnA"
+    <!-- BootstrapCND | CSS, jQuery, and JavaScript | Template used: bootswatch.com/Journal -->
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/journal/bootstrap.min.css"
+          integrity="sha384-ciphE0NCAlD2/N6NUApXAN2dAs/vcSAOTzyE202jJx3oS8n4tAQezRgnlHqcJ59C"
           crossorigin="anonymous" />
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
+            integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
+            crossorigin="anonymous"></script>
+
 </head>
 
 <body>
 
     <!-- Navigation Bar-->
     <nav th:fragment="nav-bar" class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <!--Navbar Header -->
         <a th:href="@{/}" class="navbar-brand">St. Louis Playground Finder</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -37,7 +43,7 @@
                 </li>
             </ul>
             <!-- Navbar Search form-->
-            <form class="form-inline my-2 my-lg-0">
+            <form class="form-inline my-2 my-lg-0" >
                 <input class="form-control mr-sm-2" type="text" placeholder="Search" />
                 <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
             </form>
