--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -9,20 +9,93 @@
         <!-- Heading of page -->
         <h1 th:text="${title}">View a Playground</h1>
 
-
-        <!-- if playground object exists... -->
-        <div th:if="${playground}">
-            <!-- table of playground details. Revise when database columns are flushed out. -->
-            <table>
-                <tr>
-                    <th>Name</th>
-                    <td th:text="${playground.name}"></td>
-                </tr>
-                <tr>
-                    <th>Description</th>
-                    <td th:text="${playground.description}"></td>
-                </tr>
-            </table>
+        <div class="container" th:if="${playground}">
+            <div class="row">
+                <div class="col-sm-8">
+                    <p th:text="${playground.name}">Playground Name</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-8">
+                    <div id="carouselPlayground" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="https://placeimg.com/640/480/arch" alt="First"/>
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Caption Title Test 1</h5>
+                                    <p>Testing Caption</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="https://placeimg.com/640/480/tech" alt="Second"/>
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Caption Title Test 2</h5>
+                                    <p>Testing Caption</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="https://placeimg.com/640/480/people" alt="Third"/>
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Caption Title Test 3</h5>
+                                    <p>Testing Caption</p>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselPlaground" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselPlayground" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="well">
+                        <table class="table table-sm table-striped">
+                            <thead class="thead-dark text-center">
+                                <tr>
+                                    <th scope="col" colspan="2">Equipment</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">Climbing Wall</th>
+                                    <td>False</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Swing</th>
+                                    <td>False</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Ladders</th>
+                                    <td>False</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Slides</th>
+                                    <td>False</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Structures</th>
+                                    <td>False</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">See-Saw</th>
+                                    <td>False</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-8">
+                    <div class="well">
+                        <p th:text="${playground.description}"></p>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
