added 'list.html', to list all playgrounds available

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -39,7 +39,7 @@
                     <a th:href="@{/}" class="nav-link">Search</a>
                 </li>
                 <li class="nav-item">
-                    <a th:href="@{/}" class="nav-link">Playgrounds</a>
+                    <a href="list.html" class="nav-link">Playgrounds</a>
                 </li>
             </ul>
             <!-- Navbar Search form-->
