items in 'list.html' now links to corresponding 'view' page. Fixed description to display correctly.

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -5,7 +5,7 @@
 <body class="container body-content">
     <nav th:replace="fragments :: nav-bar"></nav>
 
-    <div class="card">
+    <div class="card border-0">
         <div class="card-header">
             <h1 class="card-title text-center">List of Playgrounds</h1>
         </div>
@@ -14,8 +14,10 @@
         <div class="card" th:each="playground : ${playgrounds}">
             <img src="..." class="card-img-top" alt="..." height="200" width="200" />
             <div class="card-body">
-                <h5 class="card-title" th:text="${playground.name}">Card title</h5>
-                <p class="card-text" th:text="${playground.name}">Card Description</p>
+                <h5 class="card-title">
+                    <a class="stretched-link" th:href="@{/view/{id}(id=${playground.id})}" th:text="${playground.name}">Card title</a>
+                </h5>
+                <p class="card-text" th:text="${playground.description}">Card Description</p>
             </div>
         </div>
     </div>
