--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -9,18 +9,18 @@
         <div class="card-header">
             <h1 class="card-title text-center">List of Playgrounds</h1>
         </div>
-        <div class="card-deck">
         <h3 th:unless="${playgrounds} and ${playgrounds.size()}">No Playgrounds.</h3>
-        <div class="card" th:each="playground : ${playgrounds}">
-            <img src="..." class="card-img-top" alt="..." height="200" width="200" />
-            <div class="card-body">
-                <h5 class="card-title">
-                    <a class="stretched-link" th:href="@{/view/{id}(id=${playground.id})}" th:text="${playground.name}">Card title</a>
-                </h5>
-                <p class="card-text" th:text="${playground.description}">Card Description</p>
+        <div class="card-deck" th:if="${playgrounds} and ${playgrounds.size()}">
+            <div class="card" th:each="playground : ${playgrounds}">
+                <img src="..." class="card-img-top" alt="..." height="200" width="200" />
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <a class="stretched-link" th:href="@{/view/{id}(id=${playground.id})}" th:text="${playground.name}">Card title</a>
+                    </h5>
+                    <p class="card-text" th:text="${playground.description}">Card Description</p>
+                </div>
             </div>
         </div>
-    </div>
     </div>
 
 
