--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,16 +6,7 @@
 
     <nav th:replace="fragments :: nav-bar"></nav>
 
-    <h1 th:text="${title}">This is the index template. Bloop.</h1>
-
-    <form th:object="${searchForm}" method="post">
-        <div>
-            <label th:for="name">Search: </label>
-            <input th:field="*{name}" />
-
-        </div>
-        <input type="submit" value="Return search" />
-    </form>
+    <h1> INDEX LANDING PAGE </h1>
 
 
 
