--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-    <head th:replace="fragments :: head"></head>
+    <head th:replace="fragments :: head">
+        <!-- geocoding -->
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    </head>
 
     <body class="container body-content">
         <!--Navigation Bar-->
@@ -10,7 +13,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="card-header text-center">
-                        <h1 class="card-title" th:text="${playground.name}">Playground Name</h1>
+                        <h1 id="playgroundName" class="card-title" th:text="${playground.name}">Playground Name</h1>
                         <h6 class="card-subtitle mb-2 text-muted">Address</h6>
                     </div>
                 </div>
@@ -103,6 +106,76 @@
                     </div>
                 </div>
             </div>
+
+            <div id="map" style="width:40%; height:400px; margin-left: auto; margin-right: auto"></div>
+
+    <script>
+
+
+      function initMap() {
+
+          <!--set Map Options -->
+            var options = {
+              center: {lat: 38.6270, lng: -90.1994},
+              zoom: 9
+            };
+
+           <!--New map-->
+		    var map = new google.maps.Map(document.getElementById('map'), options );
+
+          <!-- Call getLatLng-->
+            var latLng = getLatLng();
+            var lat = latLng[0];
+            var lng = latLng[1];
+
+
+           <!-- Add marker -->
+            var marker = new google.maps.Marker({
+                        position : {lat: lat, lng: lng},
+                        map : map,
+             });
+
+           <!-- Info window for marker -->
+            var info = document.getElementById('playgroundName').value;
+            var infoWindow = new google.maps.InfoWindow( {content:'<h4> ${info}</h4>'} );
+
+            marker.addListener('click', function(){
+                                infoWindow.open(map,marker);
+            });
+      }
+
+
+      function getLatLng(){
+        var location = document.getElementById('playgroundName').value;
+        //var location = 'Chesterfield, St louis, Mo';
+        console.log(location);
+        axios.get('https://maps.googleapis.com/maps/api/geocode/json',{
+                params:{
+                        address:location,
+                        key:'AIzaSyC2jmqjcdqlm96ZPw0HSyDhXpdTC5qwazA'
+                        }
+                })
+                .then(function(response){
+                // Log full response
+                console.log(response);
+
+                // Geometry
+                var lat = response.data.results[0].geometry.location.lat;
+                var lng = response.data.results[0].geometry.location.lng;
+
+                return [lat, lng]
+                })
+                .catch(function(error){
+                    console.log(error);
+            });
+        }
+
+    </script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2jmqjcdqlm96ZPw0HSyDhXpdTC5qwazA&amp;callback=initMap"
+                    async="async" defer="defer"></script>
+
+
         </div>
     </body>
 </html>
