--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,6 +19,19 @@
 
            <!--New map-->
 		    var map = new google.maps.Map(document.getElementById('map'), options );
+
+		   <!--        Add marker -->
+            var marker = new google.maps.Marker({
+            position : {lat: 38.6270, lng: -90.1994},
+            map : map,
+          });
+
+        <!-- Info window for marker -->
+            var infoWindow = new google.maps.InfoWindow( {content:'<h4> St Louis</h4>'} );
+
+            marker.addListener('click', function(){
+            infoWindow.open(map,marker);
+        });
     }
 
     </script>
