fixed card layout so they move onto a new row

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -2,22 +2,28 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 
-<body class="container body-content">
+<body class="container container-fluid">
     <nav th:replace="fragments :: nav-bar"></nav>
 
     <div class="card border-0">
         <div class="card-header">
             <h1 class="card-title text-center">List of Playgrounds</h1>
         </div>
+
         <h3 th:unless="${playgrounds} and ${playgrounds.size()}">No Playgrounds.</h3>
-        <div class="card-deck" th:if="${playgrounds} and ${playgrounds.size()}">
-            <div class="card" th:each="playground : ${playgrounds}">
-                <img src="..." class="card-img-top" alt="..." height="200" width="200" />
-                <div class="card-body">
-                    <h5 class="card-title">
-                        <a class="stretched-link" th:href="@{/view/{id}(id=${playground.id})}" th:text="${playground.name}">Card title</a>
-                    </h5>
-                    <p class="card-text" th:text="${playground.description}">Card Description</p>
+
+        <div class="container" th:if="${playgrounds} and ${playgrounds.size()}">
+            <div class="row " >
+                <div class="col-3 mb-4" th:each="playground : ${playgrounds}">
+                    <div class="card h-100" >
+                    <img src="//placehold.it/200x200" class="card-img-top img-fluid" />
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <a class="stretched-link" th:href="@{/view/{id}(id=${playground.id})}" th:text="${playground.name}">Card title</a>
+                        </h5>
+                        <p class="card-text" th:text="${playground.description}">Card Description</p>
+                    </div>
+                </div>
                 </div>
             </div>
         </div>
