--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,34 +8,7 @@
 
     <h1> INDEX LANDING PAGE </h1>
 
-    <div id="map" style="width:80%; height:400px; margin-left: auto; margin-right: auto"></div>
-    <script>
-      function initMap() {
-          <!--set Map Options -->
-            var options = {
-              center: {lat: 38.6270, lng: -90.1994},
-              zoom: 8
-            };
-
-           <!--New map-->
-		    var map = new google.maps.Map(document.getElementById('map'), options );
-
-		   <!--        Add marker -->
-            var marker = new google.maps.Marker({
-            position : {lat: 38.6270, lng: -90.1994},
-            map : map,
-          });
-
-        <!-- Info window for marker -->
-            var infoWindow = new google.maps.InfoWindow( {content:'<h4> St Louis</h4>'} );
-
-            marker.addListener('click', function(){
-            infoWindow.open(map,marker);
-        });
-    }
-
-    </script>
-
+    <div id="map"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2jmqjcdqlm96ZPw0HSyDhXpdTC5qwazA&amp;callback=initMap"
             async="async" defer="defer"></script>
 
