--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -6,7 +6,6 @@
     </head>
 
     <body class="container body-content">
-        <!--Navigation Bar-->
         <nav th:replace="fragments :: nav-bar"></nav>
 
         <div class="card" th:if="${playground}">
@@ -99,75 +98,9 @@
                 </div>
             </div>
 
-            <div id="map" style="width:40%; height:400px; margin-left: auto; margin-right: auto"></div>
-
-    <script>
-
-
-      function initMap() {
-
-          <!--set Map Options -->
-            var options = {
-              center: {lat: 38.6270, lng: -90.1994},
-              zoom: 9
-            };
-
-           <!--New map-->
-		    var map = new google.maps.Map(document.getElementById('map'), options );
-
-          <!-- Call getLatLng-->
-            var latLng = getLatLng();
-            var lat = latLng[0];
-            var lng = latLng[1];
-
-
-           <!-- Add marker -->
-            var marker = new google.maps.Marker({
-                        position : {lat: lat, lng: lng},
-                        map : map,
-             });
-
-           <!-- Info window for marker -->
-            var info = document.getElementById('playgroundName').value;
-            var infoWindow = new google.maps.InfoWindow( {content:'<h4> ${info}</h4>'} );
-
-            marker.addListener('click', function(){
-                                infoWindow.open(map,marker);
-            });
-      }
-
-
-      function getLatLng(){
-        var location = document.getElementById('playgroundName').value;
-        //var location = 'Chesterfield, St louis, Mo';
-        console.log(location);
-        axios.get('https://maps.googleapis.com/maps/api/geocode/json',{
-                params:{
-                        address:location,
-                        key:'AIzaSyC2jmqjcdqlm96ZPw0HSyDhXpdTC5qwazA'
-                        }
-                })
-                .then(function(response){
-                // Log full response
-                console.log(response);
-
-                // Geometry
-                var lat = response.data.results[0].geometry.location.lat;
-                var lng = response.data.results[0].geometry.location.lng;
-
-                return [lat, lng]
-                })
-                .catch(function(error){
-                    console.log(error);
-            });
-        }
-
-    </script>
-
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2jmqjcdqlm96ZPw0HSyDhXpdTC5qwazA&amp;callback=initMap"
+            <div id="map"></div>
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2jmqjcdqlm96ZPw0HSyDhXpdTC5qwazA&amp;callback=initMap"
                     async="async" defer="defer"></script>
-
-
         </div>
     </body>
 </html>
