Added Bootstrap elements to pages for a more uniformed look (minus user pages). Added bootstrap form controls to add/remove pages. Fixed footer to stay at bottom of the page.

--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -2,28 +2,40 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 
-<body class="container body-content">
+<body>
 
-<nav th:replace="fragments :: nav-bar"></nav>
-<h1 th:text="${title}">Title</h1>
-<form method="post" th:object="${playground}">
-    <div>
-        <label th:for="name">Name</label>
-        <input th:field="*{name}" />
-        <span th:errors="*{name}"></span>
+    <div class="container">
+        <nav th:replace="fragments :: nav-bar"></nav>
+
+        <div class="card">
+            <div class="card-header text-center">
+                <h1 class="card-title" th:text="${title}">Title</h1>
+            </div>
+
+            <div class="card-body">
+                <form method="post" th:object="${playground}">
+                    <div class="form-group">
+                        <label th:for="name">Name</label>
+                        <input type="text" class="form-control" th:field="*{name}" />
+                        <span th:errors="*{name}"></span>
+                    </div>
+                    <div class="form-group">
+                        <label th:for="address">Address</label>
+                        <input type="text" class="form-control" th:field="*{address}" />
+                        <span th:errors="*{address}"></span>
+                    </div>
+                    <div class="form-group">
+                        <label th:for="description">Description</label>
+                        <textarea class="form-control" th:field="*{description}"></textarea>
+                        <span th:errors="*{description}"></span>
+                    </div>
+                    <button type="submit" class="btn btn-success">Add a Playground</button>
+                </form>
+            </div>
+        </div>
     </div>
-    <div>
-        <label th:for="description">Description</label>
-        <input th:field="*{description}" />
-        <span th:errors="*{description}"></span>
-    </div>
-    <div>
-        <label th:for="address">Address</label>
-        <input th:field="*{address}" />
-        <span th:errors="*{address}"></span>
-    </div>
-    <input type="submit" value="Add Playground" />
-</form>
+
+    <footer th:replace="fragments :: footer"></footer>
 
 </body>
 </html>
