--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-    <head th:replace="fragments :: head">
-        <!-- geocoding -->
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    </head>
+    <head th:replace="fragments :: head"></head>
 
-    <body class="container body-content">
+<body>
+    <div class="container">
         <nav th:replace="fragments :: nav-bar"></nav>
 
         <div class="card" th:if="${playground}">
+            <!--Row 1 | Header -->
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col">
                     <div class="card-header text-center">
                         <h1 id="playgroundName" class="card-title" th:text="${playground.name}">Playground Name</h1>
                         <h6 class="card-subtitle mb-2 text-muted">Address</h6>
                     </div>
                 </div>
             </div>
+            <!--Row 2 | Images & Info -->
             <div class="row no-gutters">
-                <div class="col-sm-8">
-                    <div class="card border-0">
+                <!--Carousel Column-->
+                <div class="col-7">
+                    <div class="card-body">
                         <div id="carouselPlayground" class="carousel slide container" data-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
@@ -55,52 +56,57 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="card border-0">
-                        <div class="card-body">
-                            <table class="table table-sm table-striped" >
-                                <thead class="thead-dark text-center">
-                                    <tr>
-                                        <th scope="col" colspan="2">Equipment</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <th scope="row">Climbing Wall</th>
-                                        <td th:text="${playground.equipment.climbingWalls}">False</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">Swing</th>
-                                        <td th:text="${playground.equipment.swings}">False</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">Ladders</th>
-                                        <td th:text="${playground.equipment.ladders}">False</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">Slides</th>
-                                        <td th:text="${playground.equipment.slides}">False</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
+                <!-- Equipment Column-->
+                <div class="col-5">
+                    <div class="card-body">
+                        <table class="table table-sm table-striped" >
+                            <thead class="thead-dark text-center">
+                                <tr>
+                                    <th scope="col" colspan="2">Equipment</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">Climbing Wall</th>
+                                    <td th:text="${playground.equipment.climbingWalls}">False</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Swing</th>
+                                    <td th:text="${playground.equipment.swings}">False</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Ladders</th>
+                                    <td th:text="${playground.equipment.ladders}">False</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Slides</th>
+                                    <td th:text="${playground.equipment.slides}">False</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
-            <div class="row no-gutters">
-                <div class="col-sm-8">
-                    <div class="card border-0">
-                        <div class="card-body">
-                            <h5 class="card-title">Playground Description</h5>
-                            <p class="card-subtitle text-muted" th:text="${playground.description}"></p>
-                        </div>
+            <!--Row 3-->
+            <div class="row">
+                <div class="col">
+                    <div class="card-body">
+                        <h5 class="card-title">Playground Description</h5>
+                        <p class="card-subtitle text-muted" th:text="${playground.description}"></p>
                     </div>
                 </div>
             </div>
-
-            <div id="map"></div>
-            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2jmqjcdqlm96ZPw0HSyDhXpdTC5qwazA&amp;callback=initMap"
-                    async="async" defer="defer"></script>
+            <!--Row 4 -->
+            <div class="row">
+                <div class="card-body">
+                    <div id="map"></div>
+                    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2jmqjcdqlm96ZPw0HSyDhXpdTC5qwazA&amp;callback=initMap"
+                        async="async" defer="defer"></script>
+                </div>
+            </div>
         </div>
-    </body>
+    </div>
+
+    <footer th:replace="fragments :: footer"></footer>
+</body>
 </html>
