--- a/src/main/resources/templates/remove.html
+++ b/src/main/resources/templates/remove.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<body class="container body-content">
-<nav th:replace="fragments :: nav-bar"></nav>
-    <h1 th:text="${title}">Default Title</h1>
 
-    <form method="post">
-        <div th:each="playground : ${playgrounds}">
-            <input type="checkbox" name="playgroundIds" th:value="${playground.id}" th:id="${playground.id}"/>
-            <label th:for="${playground.id}" th:text="${playground.name}"></label>
-            <br />
+<body>
 
+    <div class="container">
+        <nav th:replace="fragments :: nav-bar"></nav>
+        <div class="card">
+            <div class="card-header text-center">
+                <h1 class="card-title" th:text="${title}">Default Title</h1>
+            </div>
+            <div class="card-body">
+                <form method="post">
+                    <div class="form-check" th:each="playground : ${playgrounds}">
+                        <input class="form-check-input" type="checkbox" name="playgroundIds" th:value="${playground.id}" th:id="${playground.id}"/>
+                        <label class="form-check-label" th:for="${playground.id}" th:text="${playground.name}"></label>
+                    </div>
+                    <br />
+                    <button type="submit" class="btn btn-danger">Remove a Playground</button>
+                </form>
+            </div>
         </div>
-        <input type="submit" value="Remove Playground" />
-
-    </form>
+    </div>
 
 </body>
 </html>
