--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -13,7 +13,8 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="card-header text-center">
-                        <h1 id="playgroundName" class="card-title" th:text="${playground.name}">Playground Name</h1>
+                        <input id="playgroundName" th:value="${playground.name}" type="hidden"/>
+                        <h1 class="card-title" th:text="${playground.name}">Playground Name</h1>
                         <h6 class="card-subtitle mb-2 text-muted">Address</h6>
                     </div>
                 </div>
@@ -111,8 +112,7 @@
 
     <script>
 
-
-      function initMap() {
+function initMap() {
 
           <!--set Map Options -->
             var options = {
@@ -124,55 +124,47 @@
 		    var map = new google.maps.Map(document.getElementById('map'), options );
 
           <!-- Call getLatLng-->
-            var latLng = getLatLng();
-            var lat = latLng[0];
-            var lng = latLng[1];
+            var location = document.getElementById('playgroundName').value;
 
-
-           <!-- Add marker -->
-            var marker = new google.maps.Marker({
-                        position : {lat: lat, lng: lng},
-                        map : map,
-             });
-
-           <!-- Info window for marker -->
-            var info = document.getElementById('playgroundName').value;
-            var infoWindow = new google.maps.InfoWindow( {content:'<h4> ${info}</h4>'} );
-
-            marker.addListener('click', function(){
-                                infoWindow.open(map,marker);
-            });
-      }
-
-
-      function getLatLng(){
-        var location = document.getElementById('playgroundName').value;
-        //var location = 'Chesterfield, St louis, Mo';
-        console.log(location);
-        axios.get('https://maps.googleapis.com/maps/api/geocode/json',{
+                axios.get('https://maps.googleapis.com/maps/api/geocode/json',{
                 params:{
                         address:location,
-                        key:'AIzaSyC2jmqjcdqlm96ZPw0HSyDhXpdTC5qwazA'
+                        key:'AIzaSyC7hSUws5hbDKi3JScfBgPEKeGo4EbJb_s'
                         }
                 })
                 .then(function(response){
-                // Log full response
-                console.log(response);
 
                 // Geometry
                 var lat = response.data.results[0].geometry.location.lat;
+                //var lng = Math.abs(response.data.results[0].geometry.location.lng);
                 var lng = response.data.results[0].geometry.location.lng;
+                lat = lat.toFixed(4);
+                lng = lng.toFixed(4);
 
-                return [lat, lng]
-                })
-                .catch(function(error){
-                    console.log(error);
+                <!-- Add marker -->
+                var marker = new google.maps.Marker({
+                        position : {lat: parseFloat( lat ), lng: parseFloat( lng)},
+                           map: map
+                });
+
+
+                <!-- Info window for marker -->
+                var info = document.getElementById('playgroundName').value;
+                var infoWindow = new google.maps.InfoWindow( {content:'<h4> ${info}</h4>'} );
+
+                marker.addListener('click', function(){
+                                infoWindow.open(map,marker);
+                });
+
             });
-        }
+
+
+          }
+
 
     </script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2jmqjcdqlm96ZPw0HSyDhXpdTC5qwazA&amp;callback=initMap"
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7hSUws5hbDKi3JScfBgPEKeGo4EbJb_s&amp;callback=initMap"
                     async="async" defer="defer"></script>
 
 
