--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -5,23 +5,44 @@
 <body class="container body-content">
     <nav th:replace="fragments :: nav-bar"></nav>
 
-    <div class="card border-0">
-        <div class="card-header">
-            <h1 class="card-title text-center">List of Playgrounds</h1>
-        </div>
-        <h3 th:unless="${playgrounds} and ${playgrounds.size()}">No Playgrounds.</h3>
-        <div class="card-deck" th:if="${playgrounds} and ${playgrounds.size()}">
-            <div class="card" th:each="playground : ${playgrounds}">
-                <img src="..." class="card-img-top" alt="..." height="200" width="200" />
-                <div class="card-body">
-                    <h5 class="card-title">
-                        <a class="stretched-link" th:href="@{/view/{id}(id=${playground.id})}" th:text="${playground.name}">Card title</a>
-                    </h5>
-                    <p class="card-text" th:text="${playground.description}">Card Description</p>
-                </div>
-            </div>
-        </div>
-    </div>
+    <h1 class="card-title text-center">List of Playgrounds</h1>
+
+    <table id="link-list" class="table table-striped table-bordered" style="width:100%">
+        <thead>
+        <tr>
+            <th>name</th>
+            <th>description</th>
+
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="playground : ${playgrounds}">
+            <td> <a th:href="@{/view/{id}(id=${playground.id})}" th:text="${playground.name}"> </a></td>
+            <td th:text="${playground.description}" ></td>
+        </tr>
+        </tbody>
+    </table>
+
+<!--    <td th:text="${playground.name}"><a class="stretched-link" th:href="@{/view/{id}(id=${playground.id})}" th:text="${playground.name}">Card title</a></td>-->
+<!---->
+
+    <!--    <div class="card border-0">-->
+<!--        <div class="card-header">-->
+<!--            <h1 class="card-title text-center">List of Playgrounds</h1>-->
+<!--        </div>-->
+<!--        <h3 th:unless="${playgrounds} and ${playgrounds.size()}">No Playgrounds.</h3>-->
+<!--        <div class="card-deck" th:if="${playgrounds} and ${playgrounds.size()}">-->
+<!--            <div class="card" th:each="playground : ${playgrounds}">-->
+<!--                <img src="..." class="card-img-top" alt="..." height="200" width="200" />-->
+<!--                <div class="card-body">-->
+<!--                    <h5 class="card-title">-->
+<!--                        <a class="stretched-link" th:href="@{/view/{id}(id=${playground.id})}" th:text="${playground.name}">Card title</a>-->
+<!--                    </h5>-->
+<!--                    <p class="card-text" th:text="${playground.description}">Card Description</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
 
 
